# cli_opts

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  perf.data  perf.data.old
include/: cli_opts.h  mb_clite_opts.h
include/mbx/: opts.h
src/: cli_opts.c  mb_clite_opts.c  opts.c
tests/: CMakeLists.txt  benchmark_longhand.c  benchmark_longhand_equals.c  benchmark_mixed.c  benchmark_shorthand.c  cli.c  l1.c  longhand.c  run_tests.sh  shorthand.c  test.c  test.h
